--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -649,5 +649,9 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Widget : Gift with Purchase - HAW Merch -->
+    <div data-rebuy-id="134542"></div>
+    <!-- End Widget : Gift with Purchase - HAW Merch -->
   </body>
 </html>
