--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -142,11 +142,11 @@
                                         <ul class="dropdown-menu-submenu">
                                           {% if localization.market.handle == 'us' %}
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/get-pregnant-bundle">
-                                                    <div class="globel-link-badge front-badge"><span>NEW</span></div>Get Pregnant Bundle
+                                                    <div class="globel-link-badge front-badge"><span>SALE</span></div>Get Pregnant Bundle
                                                 </a></li>
                                                 {% endif %}
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-max-starter-kit">
-                                                    <div class="globel-link-badge front-badge"><span>NEW</span></div>Hormone Monitor: Max Kit
+                                                    <div class="globel-link-badge front-badge"><span>Best Seller</span></div>Hormone Monitor: Max Kit
                                                 </a></li>
                                             <li class="sub-bagge-rowx"><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-plus-starter-kit">Hormone Monitor: Basic Kit</a></li>
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/mira-max-ovum-bundle">
@@ -163,16 +163,17 @@
                                         <a class="dropdown-item" href="javascript:void(0)">Mira Wands</a>
                                         <ul class="dropdown-menu-submenu">
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/wands-bundle">
-                                                    <div class="globel-link-badge front-badge"><span>NEW</span></div>Wands Bundle
+                                                    <div class="globel-link-badge front-badge"><span>SALE</span></div>Wands Bundle
                                                 </a></li>
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/mira-max-test-wands">
-                                                    <div class="globel-link-badge front-badge"><span>NEW</span></div>Fertility Max Wands
+                                                    <div class="globel-link-badge front-badge"><span>Best Seller</span></div>Fertility Max Wands
                                                     <div class="globel-link-badge back-badges"><span class="bg-green-b5">LH</span> <span class="bg-green-af">E3G</span> <span class="bg-green-89">PdG</span></div>
                                                 </a></li>
                                             <li><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-plus-test-wands">Fertility Plus Wands
                                                     <div class="globel-link-badge back-badges"><span class="bg-green-b5">LH</span> <span class="bg-green-af">E3G</span></div>
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-ovum-wands">Ovum Wands
+                                            <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-ovum-wands">
+                                              <div class="globel-link-badge front-badge"><span>NEW</span></div>Ovum Wands
                                                     <div class="globel-link-badge back-badges"><span class="bg-brown-ab">FSH</span></div></a></li>
                                             
                                             <li><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-confirm-test-wands">
@@ -188,7 +189,8 @@
                                     <li class="dropdown-nav-list has-submenu">
                                         <a class="dropdown-item" href="javascript:void(0)">Virtual Consultations</a>
                                         <ul class="dropdown-menu-submenu">
-                                            <li><a class="dropdown-item" href="{{ sub_folder }}/products/coaching">Fertility Coaching Session</a></li>
+                                            <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/coaching">
+                                              <div class="globel-link-badge front-badge"><span>NEW</span></div>Fertility Coaching Session</a></li>
                                         </ul>
                                     </li>
                                     
@@ -202,8 +204,8 @@
                                             <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/basal-body-thermometer">
                                                     <div class="globel-link-badge front-badge"><span>NEW</span></div>Basal Body Thermometer
                                                 </a></li>
-                                            <li><a class="dropdown-item" href="{{ sub_folder }}/products/prenatal-multivitamin">
-                                                    Prenatal Multi-Vitamins
+                                            <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/prenatal-multivitamin">
+                                                    <div class="globel-link-badge front-badge"><span>Best Seller</span></div>Prenatal Multi-Vitamins
                                                 </a></li>
                                             {% endif %}
                                             {% if localization.market.handle == 'us' %}
@@ -230,7 +232,8 @@
                                     <li class="dropdown-nav-list has-submenu hide_ios">
                                         <a class="dropdown-item" href="javascript:void(0)">Online Courses</a>
                                         <ul class="dropdown-menu-submenu">
-                                            <li><a class="dropdown-item" href="{{ sub_folder }}/products/academy">Guided TTC Plan</a></li>
+                                            <li class="sub-bagge-row"><a class="dropdown-item" href="{{ sub_folder }}/products/academy">
+                                              <div class="globel-link-badge front-badge"><span>SALE</span></div>Get Pregnant Course</a></li>
                                             <li><a class="dropdown-item" href="{{ sub_folder }}/products/fertility-meditations">Meditation Playlist</a></li>
                                         </ul>
                                     </li>
