Max kit update live and HAW Merch live - changes

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -71,7 +71,9 @@
           product.handle == 'panorama-fertility-lab-test' or 
           product.handle == 'fertility-max-starter-kit' or
           product.handle == 'fertility-plus-starter-kit' or
-          product.handle == 'mira-max-ovum-bundle'
+          product.handle == 'mira-max-ovum-bundle' or
+          product.handle == 'mira-recycled-tri-borough-shopper' or
+          product.handle == 'mira-stainless-steel-bottle'
         %}
           <div class="col-lg-6 new-custom-product-detail">
               <product-info
