--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -89,7 +89,9 @@
               product.handle == 'panorama-fertility-lab-test' or 
               product.handle == 'fertility-max-starter-kit' or
               product.handle == 'fertility-plus-starter-kit' or
-              product.handle == 'mira-max-ovum-bundle'
+              product.handle == 'mira-max-ovum-bundle' or
+              product.handle == 'mira-recycled-tri-borough-shopper' or
+              product.handle == 'mira-stainless-steel-bottle'
             %}
             <span class="price-separater">&nbsp; — &nbsp;</span>
             <div class="no-js-hidden custom-price-section desktop-price" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
