--- a/sections/how-mira-works.liquid
+++ b/sections/how-mira-works.liquid
@@ -41,7 +41,7 @@
                <div class="how-use-col how-step-3 FadeUp">
                   <h3>Step 3</h3>
                   <p>
-                    In 21 minutes, your hormone results will automatically sync with the Mira App.
+                    In 21 minutes, your hormone results will automatically sync with the Mira App. jacobo
                   </p>
                  <div class="how-use-img">
                    <div class="how-to-column-image">
