--- a/templates/product.male_fertility.liquid
+++ b/templates/product.male_fertility.liquid
@@ -48,7 +48,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'home-sperm-test', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/home-sperm-test" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -76,7 +76,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'exseed-home-sperm-test', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/exseed-home-sperm-test" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/exseed-home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
