--- a/templates/product.mira_kits.liquid
+++ b/templates/product.mira_kits.liquid
@@ -56,7 +56,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -82,7 +82,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -114,7 +114,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'mira-plus-confirm-bundle', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
