--- a/templates/product.mira_wands.liquid
+++ b/templates/product.mira_wands.liquid
@@ -53,7 +53,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -78,7 +78,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -105,7 +105,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -167,7 +167,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
