--- a/templates/product.more_for_fertility.liquid
+++ b/templates/product.more_for_fertility.liquid
@@ -48,7 +48,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -76,7 +76,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -100,7 +100,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -126,7 +126,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'academy', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'kgoal-smart-kegel-exerciser', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/kgoal-smart-kegel-exerciser" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/kgoal-smart-kegel-exerciser" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -255,7 +255,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -281,7 +281,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'gift-card', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/gift-card/" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/gift-card/" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -308,7 +308,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
