--- a/templates/product.virtual_consultations.liquid
+++ b/templates/product.virtual_consultations.liquid
@@ -43,7 +43,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'coaching', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
