--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -57,7 +57,7 @@
 
                    {% include 'subscription-plp-endrock', with string_variable: 'get-pregnant-bundle', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/get-pregnant-bundle" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/get-pregnant-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -90,7 +90,7 @@
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', sub_folder: sub_folder %}
 
 
-                <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -117,7 +117,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -150,7 +150,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
                   
                   {% include 'subscription-plp-endrock', with string_variable:'mira-plus-confirm-bundle', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -231,7 +231,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'wands-bundle', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/wands-bundle" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/wands-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -263,7 +263,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', sub_folder: sub_folder %}
                 
-                <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -290,7 +290,7 @@
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', sub_folder: sub_folder %}
 
 
-                <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -318,7 +318,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -352,7 +352,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink"
+                <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
                 >
               </div>
@@ -382,7 +382,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -412,7 +412,7 @@
                   <div class="old-price"></div>
                 </div>
                 {% include 'subscription-plp-endrock', with string_variable: 'coaching', sub_folder: sub_folder %}
-                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -448,7 +448,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'home-sperm-test', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/home-sperm-test" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -475,7 +475,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'exseed-home-sperm-test', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/exseed-home-sperm-test" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/exseed-home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -520,7 +520,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink" data-plpBtn="true" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
@@ -547,7 +547,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -571,7 +571,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -596,7 +596,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -620,7 +620,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                  <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
               </div>
             </div>
@@ -643,7 +643,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'academy', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -669,7 +669,7 @@
 
                 {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', sub_folder: sub_folder %}
 
-                <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink">Buy&nbsp;now</a>
+                <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
             </div>
           </div>
@@ -695,7 +695,7 @@
 
                   {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', sub_folder: sub_folder %}
 
-                  <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
