--- a/templates/product.mira_kits.liquid
+++ b/templates/product.mira_kits.liquid
@@ -54,7 +54,7 @@
                   <div class="old-price">{{ all_products['fertility-max-starter-kit'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', with sub_folder: sub_folder, with num: 23 %}
 
                 <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -80,7 +80,7 @@
                   <span class="plat-price">{{ all_products['fertility-plus-starter-kit'].price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', with sub_folder: sub_folder, with num: 24 %}
 
                 <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -112,7 +112,7 @@
                   <span class="plat-price">{{ all_products['mira-max-ovum-bundle'].price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', with sub_folder: sub_folder, with num: 25 %}
 
                 <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -145,7 +145,7 @@
                     <div class="old-price">{{ all_products['mira-plus-confirm-bundle'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'mira-plus-confirm-bundle', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'mira-plus-confirm-bundle', with sub_folder: sub_folder, with num: 26 %}
 
                   <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
