--- a/templates/product.mira_wands.liquid
+++ b/templates/product.mira_wands.liquid
@@ -51,7 +51,7 @@
                   <div class="old-price">{{ all_products['mira-max-test-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', with sub_folder: sub_folder, with num: 27 %}
 
                 <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -76,7 +76,7 @@
                   <div class="old-price">{{ all_products['fertility-plus-test-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', with sub_folder: sub_folder, with num: 28 %}
 
                 <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -103,7 +103,7 @@
                   <div class="old-price">{{ all_products['fertility-ovum-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', with sub_folder: sub_folder, with num: 29 %}
 
                 <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -137,7 +137,7 @@
                   </div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', with sub_folder: sub_folder, with num: 30 %}
 
                 <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -165,7 +165,7 @@
                     <div class="old-price">{{ all_products['fertility-test-wands'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', with sub_folder: sub_folder, with num: 31 %}
 
                   <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
