--- a/templates/product.more_for_fertility.liquid
+++ b/templates/product.more_for_fertility.liquid
@@ -46,7 +46,7 @@
                     <div class="old-price">{{ all_products['basal-body-thermometer'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', with sub_folder: sub_folder, with num: 35 %}
 
                   <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -74,7 +74,7 @@
                     <div class="old-price">{{ all_products['fertility-tea'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', with sub_folder: sub_folder, with num: 36 %}
 
                   <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="old-price">{{ all_products['fertility-tea-ww'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', with sub_folder: sub_folder, with num: 37 %}
 
                   <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="old-price">{{ all_products['pregnancy-tea'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', with sub_folder: sub_folder, with num: 38 %}
 
                   <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -148,7 +148,7 @@
                     <span class="plat-price">{{ all_products['prenatal-multivitamin'].price | money }}</span>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', with sub_folder: sub_folder, with num: 39 %}
 
                   <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -169,7 +169,7 @@
                   <span class="plat-price">{{ all_products.academy.price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'academy', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'academy', with sub_folder: sub_folder, with num: 40 %}
 
                 <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -194,7 +194,7 @@
                   <span class="plat-price">{{ all_products['fertility-meditations'].price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', with sub_folder: sub_folder, with num: 41 %}
 
                 <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -222,7 +222,7 @@
                     </div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'kgoal-smart-kegel-exerciser', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'kgoal-smart-kegel-exerciser', with sub_folder: sub_folder, with num: 42 %}
 
                   <a href="{{ sub_folder }}/products/kgoal-smart-kegel-exerciser" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -253,7 +253,7 @@
                     </div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', with sub_folder: sub_folder, with num: 43 %}
 
                   <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -279,7 +279,7 @@
                   <div class="old-price"></div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'gift-card', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'gift-card', with sub_folder: sub_folder, with num: 44 %}
 
                 <a href="{{ sub_folder }}/products/gift-card/" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -306,7 +306,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', with sub_folder: sub_folder, with num: 45 %}
 
                   <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
