--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -55,7 +55,7 @@
                     <div class="old-price">{{ all_products['get-pregnant-bundle'].compare_at_price | money }}</div>
                   </div>
 
-                   {% include 'subscription-plp-endrock', with string_variable: 'get-pregnant-bundle', sub_folder: sub_folder %}
+                   {% include 'subscription-plp-endrock', with string_variable: 'get-pregnant-bundle', with sub_folder: sub_folder, with num: 1 %}
 
                   <a href="{{ sub_folder }}/products/get-pregnant-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -87,7 +87,7 @@
                   <div class="old-price">{{ all_products['fertility-max-starter-kit'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-max-starter-kit', with sub_folder: sub_folder, with num: 2  %}
 
 
                 <a href="{{ sub_folder }}/products/fertility-max-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
@@ -115,7 +115,7 @@
                   <span class="plat-price">{{ all_products['fertility-plus-starter-kit'].price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-starter-kit', with sub_folder: sub_folder, with num: 3 %}
 
                 <a href="{{ sub_folder }}/products/fertility-plus-starter-kit" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -148,7 +148,7 @@
                   <span class="plat-price">{{ all_products['mira-max-ovum-bundle'].price | money }}</span>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-ovum-bundle', with sub_folder: sub_folder, with num: 4 %}
 
                 <a href="{{ sub_folder }}/products/mira-max-ovum-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -181,7 +181,7 @@
                     <div class="old-price">{{ all_products['mira-plus-confirm-bundle'].compare_at_price | money }}</div>
                   </div>
                   
-                  {% include 'subscription-plp-endrock', with string_variable:'mira-plus-confirm-bundle', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable:'mira-plus-confirm-bundle', with sub_folder: sub_folder, with num: 5 %}
 
                   <a href="{{ sub_folder }}/products/mira-plus-confirm-bundle" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -229,7 +229,7 @@
                   <div class="old-price">{{ all_products['wands-bundle'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'wands-bundle', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'wands-bundle', with sub_folder: sub_folder, with num: 6 %}
 
                 <a href="{{ sub_folder }}/products/wands-bundle" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -261,7 +261,7 @@
                   <div class="old-price">{{ all_products['mira-max-test-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'mira-max-test-wands', with sub_folder: sub_folder, with num: 7 %}
                 
                 <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -287,7 +287,7 @@
                   <div class="old-price">{{ all_products['fertility-plus-test-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-plus-test-wands', with sub_folder: sub_folder, with num: 8 %}
 
 
                 <a href="{{ sub_folder }}/products/fertility-plus-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
@@ -316,7 +316,7 @@
                   <div class="old-price">{{ all_products['fertility-ovum-wands'].compare_at_price | money }}</div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-ovum-wands', with sub_folder: sub_folder, with num: 9 %}
 
                 <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -350,7 +350,7 @@
                   </div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-confirm-test-wands', with sub_folder: sub_folder, with num: 10 %}
 
                 <a href="{{ sub_folder }}/products/fertility-confirm-test-wands" class="btn-custom btn-pink" data-plpBtn="true"
                   >Buy&nbsp;now</a
@@ -380,7 +380,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-test-wands', with sub_folder: sub_folder, with num: 11 %}
 
                   <a href="{{ sub_folder }}/products/fertility-test-wands" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -446,7 +446,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'home-sperm-test', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'home-sperm-test', with sub_folder: sub_folder, with num: 12 %}
 
                   <a href="{{ sub_folder }}/products/home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -473,7 +473,7 @@
                     <div class="old-price">{{ all_products['exseed-home-sperm-test'].compare_at_price | money }}</div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'exseed-home-sperm-test', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'exseed-home-sperm-test', with sub_folder: sub_folder, with num: 13 %}
 
                   <a href="{{ sub_folder }}/products/exseed-home-sperm-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -518,7 +518,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', with sub_folder: sub_folder, with num: 14 %}
 
                   <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink" data-plpBtn="true" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -545,7 +545,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', with sub_folder: sub_folder, with num: 15 %}
 
                   <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -569,7 +569,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', with sub_folder: sub_folder, with num: 16 %}
 
                   <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -594,7 +594,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', with sub_folder: sub_folder, with num: 17 %}
 
                   <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -618,7 +618,7 @@
                     <span class="plat-price">{{ all_products['prenatal-multivitamin'].price | money }}</span>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', with sub_folder: sub_folder, with num: 18 %}
 
                   <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
                 </div>
@@ -641,7 +641,7 @@
                   <div class="old-price"></div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'academy', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'academy', with sub_folder: sub_folder, with num: 19 %}
 
                 <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -667,7 +667,7 @@
                   <div class="old-price"></div>
                 </div>
 
-                {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', sub_folder: sub_folder %}
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', with sub_folder: sub_folder, with num: 20 %}
 
                 <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
               </div>
@@ -693,7 +693,7 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', with sub_folder: sub_folder, with num: 21 %}
 
                   <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
@@ -723,9 +723,9 @@
                     <div class="old-price"></div>
                   </div>
 
-                  {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', sub_folder: sub_folder %}
+                  {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', with sub_folder: sub_folder, with num: 22 %}
 
-                  <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink"
+                  <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink" data-plpBtn="true"
                     >Buy&nbsp;now</a
                   >
                 </div>
