--- a/snippets/subscription-plp-endrock.liquid
+++ b/snippets/subscription-plp-endrock.liquid
@@ -1,6 +1,7 @@
 
 {% assign product_handle = string_variable %}
 {% assign sub_folder = sub_folder %}
+{% assign number = num %}
 <div class="subscriptions">
     {% if all_products[product_handle].selling_plan_groups != blank %}
       {% assign sellingPlanId = all_products[product_handle].selling_plan_groups[0].selling_plans[0].id %}
@@ -9,13 +10,13 @@
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="id" value="{{ all_products[product_handle].variants.first.id }}" />
     {% if all_products[product_handle].selling_plan_groups != blank %}                   
-        <label for="subscription-endrock1" class="subscriptions-text card-style subscription-wrapper">
-          <input type="radio" name="subscription-type" id="subscription-endrock1" data-subscription-input/> <!-- This id must be different for all -->
+        <label for="subscription-endrock{{ number }}" class="subscriptions-text card-style subscription-wrapper">
+          <input type="radio" name="subscription-type" id="subscription-endrock{{ number }}" data-subscription-input/>
           <div>Subscribe & save <span class="subscription-highlight">10% OFF</span>
           <p class="text-span">Cancel or change your subscription online any time</p></div>
         </label>
-        <label for="onetime-endrock1" class="subscriptions-text card-style one-time-wrapper">
-          <input type="radio" name="subscription-type" id="onetime-endrock1"/>
+        <label for="onetime-endrock{{ number }}" class="subscriptions-text card-style one-time-wrapper">
+          <input type="radio" name="subscription-type" id="onetime-endrock{{ number }}"/>
           One-time purchase
         </label>
     {% endif %}
