--- a/assets/pdm-estimated-delivery.css
+++ b/assets/pdm-estimated-delivery.css
@@ -3,7 +3,7 @@ body:not([data-pdm-estimated-delivery]) .pdm-estimated-delivery {
 }
 
 .pdm-estimated-delivery {
-  margin-top: 32px;
+  margin-top: 24px;
   margin-bottom: 24px;
 }
 
@@ -32,13 +32,13 @@ body:not([data-pdm-estimated-delivery]) .pdm-estimated-delivery {
 }
 
 .pdm-estimated-delivery__info #dates {
+  color: rgba(63, 193, 95, 1);
   margin-bottom: 0;
 }
 
-.pdm-estimated-delivery__info .delivery-date {
-  color: rgba(63, 193, 95, 1);
-}
-
 .pdm-estimated-delivery .disclaimer {
+  text-align: center;
   margin-top: 16px;
+  font-size: 12px;
+  color: #667789;
 }
