--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -382,6 +382,7 @@
                             {% endif %}
                           </div>
                         </div>
+                        {% render 'pdm-estimated-delivery' %}
                         <div {{ block.shopify_attributes }}>
                           {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
                           {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
