fix(estimated-delivery): added to bundle products)

--- a/sections/bf-bundle-sections.liquid
+++ b/sections/bf-bundle-sections.liquid
@@ -30,6 +30,7 @@
                     <input name="add" value="Add to Cart" type="submit" class="bf-add-cart-btn btn-custom button add-to-cart-btn" />
                 </form>
             </div>
+            {% render 'pdm-estimated-delivery' %}
         </div>
     </div>
 </section>
