--- a/assets/pdm-estimated-delivery.css
+++ b/assets/pdm-estimated-delivery.css
@@ -42,3 +42,22 @@ body:not([data-pdm-estimated-delivery]) .pdm-estimated-delivery {
   font-size: 12px;
   color: #667789;
 }
+
+/*
+* Bundle related styles
+*
+* */
+
+.bf-bundle-banner-content .pdm-estimated-delivery {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 768px) {
+  .bf-bundle-banner-content .pdm-estimated-delivery {
+    max-width: 50%;
+    min-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
