fix scroll after stickyATC btn click

--- a/assets/style.css
+++ b/assets/style.css
@@ -19635,3 +19635,12 @@ footer.cart__footer #md-footer-selector-block {
 
 /* CSS for photo gallery end */
 /* CSS for Dual columm abtest start */
+
+
+/*====================================
+        STICKY ATC 
+====================================*/
+
+.atc-section-endrock {
+    height: 70px;
+}
