fix(estimadet-delivery): fix for another bundle)

--- a/sections/bf-wands-bundle-sections.liquid
+++ b/sections/bf-wands-bundle-sections.liquid
@@ -30,6 +30,7 @@
                     <input name="add" value="Add to Cart" type="submit" class="add-to-cart-btn bf-add-cart-btn btn-custom button product-form__submit" />
                 </form>
             </div>
+            {% render 'pdm-estimated-delivery' %}
         </div>
     </div>
 </section>
